--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title>Nivetha Student | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
@@ -20,11 +20,11 @@
 
     <div class="page">
       <h1>Sammy Student</h1>
-      <p>Welcome to my site.</p>
+      <p>Welcome to my new site.</p>
     </div>
 
     <footer>
-      <p>&copy; 2021 Sammy Student |
+      <p>&copy; 2024 Sammy Student |
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
