--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="page">
-      <h1>Sammy Student</h1>
+      <h1 style = "color: red">Sammy Student</h1>
       <p>Welcome to my new site.</p>
     </div>
 
